--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Manrope", sans-serif;
+  line-height: 1.2;
+  font-weight: 400;
 }
