--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,6 +2,10 @@
   background-color: #f9f9ff;
 }
 
+.banner-headline {
+  font-size: 60px;
+}
+
 .banner-text--highlights {
   background: -webkit-linear-gradient(90deg, #7e90fe 0%, #9873ff 100%);
   -webkit-background-clip: text;
