--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@ body {
   line-height: 1.2;
   font-weight: 400;
 }
+
+.section-padding {
+  padding: 100px 0;
+}
+
+.headline-secondary {
+  color: #1a1919;
+}
