--- a/src/components/FeaturedJob/FeaturedJob.css
+++ b/src/components/FeaturedJob/FeaturedJob.css
@@ -1,5 +1,11 @@
 .featured-job-item {
   padding: 30px;
+  transition: all 500ms;
+}
+
+.featured-job-item:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .featured-job-icon {
