--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   font-weight: 400;
 }
 
+strong {
+  font-weight: 800;
+  color: rgba(26, 25, 25, 1);
+}
+
 .section-padding {
   padding: 100px 0;
 }
