--- a/src/components/JobList/JobList.css
+++ b/src/components/JobList/JobList.css
@@ -11,3 +11,9 @@
   border-radius: 8px;
   padding: 50px 25px;
 }
+
+@media (max-width: 704px) {
+  .applied-job-item {
+    grid-template-columns: 1fr;
+  }
+}
